fix: solve mobile dark mode body color issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,10 +28,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-body {
-  
+  background-color: #ffffff;
 }
 
 a {
